--- a/files/supervisord.conf
+++ b/files/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:readthedocs]
-directory=/www/readthedocs.org/readthedocs
+directory=/www/readthedocs.org
 command=python manage.py runserver 0.0.0.0:8000
 autostart=true
 autorestart=true
